# Rust_Practice_Book

./: README.md
calr/: Cargo.toml
calr/src/: lib.rs  main.rs
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/: cli.rs
commr/: Cargo.toml
commr/src/: lib.rs
cutr/: Cargo.toml
cutr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs  main.rs
grepr/: Cargo.toml
grepr/src/: lib.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs
hello/: Cargo.toml
hello/tests/: cli.rs
lsr/: Cargo.toml
lsr/src/: lib.rs  main.rs  owner.rs
tailr/: Cargo.toml
tailr/src/: lib.rs  main.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
wcr/tests/expected/: all.lwm.out  all.m.out  all.ml.out  all.out  all.wc.out  all.wm.out
