[package]
name = "findr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
walkdir = "2"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
rand = "0.8.5"
